test_regress/t/t_func_wide_out_bad.out
%Error-UNSUPPORTED: t/t_func_wide_out_bad.v:16:12: Function output argument 'data' requires 4352 bits, but connection's VARREF 'msg' generates 4350 bits. Casting of Output/Inout variables is currently unsupported.
                                                 : ... In instance t
   16 |       func(msg);
      |            ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
